[package]
name = "rust_hyper"
version = "0.1.0"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]

[dependencies]
chrono = "0.4"
fern = "0.5"
futures = "0.1"
futures-cpupool = "0.1"
horrorshow = "0.6"
hyper = "0.11"
log = "0.4"
mime = "0.3"
net2 = "0.2"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
tokio-core = "0.1"
