[package]
name = "rust_hyper"
version = "0.1.0"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]

[dependencies]
chrono = "0.4"
fern = "0.5"
futures = "0.1"
horrorshow = "0.6"
http = "0.1"
hyper = "0.12"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
tokio-threadpool = "0.1"
